documentation/versioned_docs/version-1.x/examples/combine-models.mdx
---
id: combine-models
title: Combining multiple models
description: Load multiple models in the same viewer and apply transformation to correctly place the models
---

`Cognite3DViewer` supports combining multiple CAD- and point cloud-models into one view and lets
users interact with them as if they were one model. This is done by simply adding multiple models
using `Cognite3DViewer.addModel`, `Cognite3DViewer.addCadModel` or `Cognite3DViewer.addPointCloudModel`.

import { DemoWrapper } from '@site/versioned_docs/version-1.x/components/DemoWrapper';

<DemoWrapper name="Cognite3DViewerDemo" />

# Modify coordinate systems

In many cases, it will be necessary to apply some transformation to the models to make them be in the same
coordinate system. This can be done using `setModelTransformation` with a [`THREE.Matrix4`](https://threejs.org/docs/#api/en/math/Matrix4)
representing the transformation. Note that each 3D model stored in Cognite Data Fusion will have an associated
model transformation that is loaded when the model is added. When updating `setModelTransformation` this model transformation
should also be applied to ensure that the axis system is correct.

The following example shows how to modify the coordinate system of a point cloud model to make it fit with a CAD model.

```jsx runnable-1x
viewer.addModel({
  modelId: 5564365369975452 ,
  revisionId: 2817572261344477,
}).then(pointCloudModel => {
  // Retrieve default transformation
  const modelTransformation = pointCloudModel.getModelTransformation();
  // Apply translation
  const translation = new THREE.Matrix4().makeTranslation(140, 75, -110);
  modelTransformation.multiply(translation);
  // Update model transformation
  pointCloudModel.setModelTransformation(modelTransformation);

  viewer.fitCameraToModel(pointCloudModel);
});
```
